isme ek button liya he aur sath hi progressbar view liye he. Dono ki id get kr liya he aur fir xml file me Progresbar ki visiblity ko invisible set kr diya he. fir Button ke click listner pr Progressbar ko setVisiblityy(VISIBLE)kr diya he bas...

--- a/HappyBirthday/app/src/main/res/values/strings.xml
+++ b/HappyBirthday/app/src/main/res/values/strings.xml
@@ -2,4 +2,37 @@
     <string name="app_name">Happy Birthday</string>
     <string name="happy_birthday_text">Happy Birthday Badal!</string>
     <string name="signature_text">From Cloudy</string>
+    <string name="lorem">
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        ns. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        ns. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web desig
+        ns. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled
+        ns. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled
+        ns. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambledparts of
+    </string>
+    <string name="title_activity_at_x">atX</string>
 </resources>
